--- a/src-inject/vscode-frosted-glass-theme.css
+++ b/src-inject/vscode-frosted-glass-theme.css
@@ -9,7 +9,8 @@
 
 /* Action Bar */
 .action-label.codicon {
-  transition: var(--fgt-transition);
+  transition: color var(--fgt-transition),
+    background-color var(--fgt-transition);
 }
 
 /* Editor Widget */
