--- a/inject/vscode-frosted-glass-theme.css
+++ b/inject/vscode-frosted-glass-theme.css
@@ -45,6 +45,7 @@
 /* Scroll Bar */
 .monaco-editor .scrollbar.vertical .slider {
   backdrop-filter: none !important;
+  background-color: var(--vscode-scrollbarSlider-background) !important;
 }
 
 /* Setting Page */
@@ -170,6 +171,6 @@ https://github.com/microsoft/vscode/blob/4b78857fd9c934cab979171380573452ffdc612
 }
 
 /* Terminal Overlay */
-.hover-overlay {
-  backdrop-filter: var(--fgt-backdrop-filter);
+.xterm-scrollable-element {
+  background-color: transparent !important;
 }
