--- a/src-inject/vscode-frosted-glass-theme.css
+++ b/src-inject/vscode-frosted-glass-theme.css
@@ -110,10 +110,15 @@ https://github.com/microsoft/vscode/blob/4b78857fd9c934cab979171380573452ffdc612
 .monaco-menu-container .monaco-scrollable-element,
 .action-widget,
 .monaco-breadcrumbs-picker,
-.quick-input-widget,
-.monaco-select-box-dropdown-container {
+.quick-input-widget {
   animation: var(--fgt-animation-menu);
 }
+
+/* Dropdown Animation */
+.monaco-select-box-dropdown-container {
+  animation: var(--fgt-animation-dropdown);
+}
+
 
 @keyframes fgtDropdown {
   from {
