feat: add hover animation (defaults to `none`)

--- a/src-inject/vscode-frosted-glass-theme.css
+++ b/src-inject/vscode-frosted-glass-theme.css
@@ -100,7 +100,7 @@ https://github.com/microsoft/vscode/blob/4b78857fd9c934cab979171380573452ffdc612
   }
 }
 
-/* Menu Dropdown Animation */
+/* Menu Animation */
 .monaco-menu-container,
 .context-view {
   overflow: clip !important;
@@ -119,6 +119,14 @@ https://github.com/microsoft/vscode/blob/4b78857fd9c934cab979171380573452ffdc612
   animation: var(--fgt-animation-dropdown);
 }
 
+/* Hover Animation */
+div[widgetid="editor.contrib.resizableContentHoverWidget"] {
+  overflow: clip !important;
+}
+
+.monaco-hover {
+  animation: var(--fgt-animation-hover);
+}
 
 @keyframes fgtDropdown {
   from {
